Minor spacing fix for messages

--- a/apps/web/src/styles/modules/Message.module.css
+++ b/apps/web/src/styles/modules/Message.module.css
@@ -13,8 +13,9 @@
 }
 
 .message.hiddenAuthor {
-  padding-top: 0;
-  padding-bottom: 0.6rem;
+  margin-top: -0.5rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .avatarPlaceholder {
@@ -39,6 +40,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 0.4rem;
 
   p {
     font-weight: bold;
